Fixed issue where navbar would slide off screen at very wide vw

--- a/css/style.css
+++ b/css/style.css
@@ -115,6 +115,7 @@ body {
     top: 0;
     width: calc(100% - 32px);
     background-color: var(--color-white);
+    max-width: 1920px;
 }
 
 #nav {
